--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"adm-zip": "^0.5.15",
+		"axios": "^1.7.3",
+		"csv-parser": "^3.0.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mongodb": "^6.8.0",
-		"mongoose": "^8.5.2"
+		"mongoose": "^8.5.2",
+		"unzipper": "^0.12.3"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
