--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,7 @@
 	"name": "w17_book_manager",
 	"version": "1.0.0",
 	"description": "",
+	"type": "module",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +15,7 @@
 	"dependencies": {
 		"adm-zip": "^0.5.15",
 		"axios": "^1.7.3",
+		"cors": "^2.8.5",
 		"csv-parser": "^3.0.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
